2010-07-20  Robert Larice
 * src/frontend/com_option.c ,
 * src/frontend/com_set.c ,
 * src/frontend/com_strcmp.c ,
 * src/frontend/cpitf.c ,
 * src/frontend/dotcards.c ,
 * src/frontend/init.c ,
 * src/frontend/inp.c ,
 * src/frontend/variable.c ,
 * src/frontend/variable.h ,
 * src/frontend/wdisp/windisp.c ,
 * src/include/cpextern.h :
    use a void * for the third argument (&value) of the cp_vset() function
      (polymorphic, has been claimed to be char *)

2010-07-20  Robert Larice
 * src/tclspice.c :
    drop #include <frontend/variable.h>, (even for non MSC_VER)

2010-07-20  Robert Larice
 * src/main.c :
    fix an incorrect type, (&char versus &bool)

2010-07-20  Robert Larice
 * src/frontend/inp.c ,
 * src/frontend/misccoms.c ,
 * src/frontend/postcoms.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/spec.c ,
 * src/frontend/subckt.c ,
 * src/frontend/plotting/agraf.c :
    Change remaining code to use the new usage pattern cp_getvar(,CP_BOOL,NULL)

2010-07-20  Robert Larice
 * src/frontend/com_display.c ,
 * src/frontend/device.c ,
 * src/frontend/inp.c ,
 * src/frontend/inpcom.c ,
 * src/frontend/measure.c ,
 * src/frontend/nutinp.c ,
 * src/frontend/outitf.c ,
 * src/frontend/terminal.c ,
 * src/frontend/variable.c ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/x11.c :
    allow cp_getvar(,CP_BOOL,NULL) to avoid insane usage
      The third parameter is a pointer to the result value.
      Frequently only the function return value is used,
        (presence or nonpresence of the variable)
        and the third parameter points to an unused variable.
      Even worse, in several cases a dummy variable of incorrect type is used
        for that purpose.
      Thus,
         allow the third parameter to be NULL, and kill those dummy variables.

2010-07-19  Holger Vogt
 * b4ld.c: correct typo which led to non-convergence of ro_17.cir
 
 2010-07-17  Robert Larice
 * src/main.c ,
 * src/frontend/inp.c ,
 * src/frontend/options.c ,